this is messing up mobile

--- a/views/media.pug
+++ b/views/media.pug
@@ -1576,7 +1576,7 @@ block extra_footer_js
               cursor: ''
             });
 
-            $('.plyr__controls').show()
+            // $('.plyr__controls').show()
 
 
           } else {
@@ -1585,7 +1585,7 @@ block extra_footer_js
               cursor: 'default'
             });
 
-            $('.plyr__controls').show()
+            // $('.plyr__controls').show()
 
             fadeInBuffer = false;
           }
@@ -1598,7 +1598,7 @@ block extra_footer_js
               cursor: 'none'
             });
 
-            $('.plyr__controls').hide()
+            // $('.plyr__controls').hide()
 
             fadeInBuffer = true;
           }, 2030)
