adding rss button

--- a/views/media.pug
+++ b/views/media.pug
@@ -601,18 +601,24 @@ block content
 
                         br
 
-                        div.bottomButtons(style="margin-top:-21px;padding-bottom:10px;")
+                        div.bottomButtons(style="margin-top:-17px;padding-bottom:10px;")
 
                             //// embed button
                             div.change-size-button(style="margin-left:0px;color: rgb(121 119 119) !important;")
                                 h2.share-button
-                                    i.share-icon.fas.fa-code(aria-hidden="true" style="cursor:pointer;font-size:19px;margin-left:0px;")
+                                    i.share-icon.fas.fa-code(aria-hidden="true" style="cursor:pointer;font-size:26px;margin-left:0px;")
+
+                            // report upload button
+                            div.change-size-button(style="cursor:pointer;margin-left:6px;color: rgb(121 119 119) !important;")
+                                h2.report-button(style="font-size:19px;")
+                                    i.share-icon.fas.fa-rss(aria-hidden="true" style="cursor:pointer;font-size:26px;")
 
 
                             // report upload button
-                            div.change-size-button(style="cursor:pointer;margin-left:0px;color: rgb(121 119 119) !important;")
+                            div.change-size-button(style="cursor:pointer;margin-left:6px;color: rgb(121 119 119) !important;")
                                 h2.report-button(style="font-size:19px;")
-                                    i.share-icon.fa.fa-exclamation-triangle(aria-hidden="true" style="cursor:pointer;font-size:17px;")
+                                    i.share-icon.fa.fa-exclamation-triangle(aria-hidden="true" style="cursor:pointer;font-size:26px;")
+
 
 
 
