--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -105,6 +105,9 @@ script.
     autoplay = true;
   }
 
+  // TODO: add the t=12 parameter here
+
+
   console.log('should autoplay ' + autoplay)
 
 
