--- a/views/media.pug
+++ b/views/media.pug
@@ -610,7 +610,7 @@ block content
 
                             // report upload button
                             div.change-size-button(style="cursor:pointer;margin-left:6px;color: rgb(121 119 119) !important;")
-                                h2.report-button(style="font-size:19px;")
+                                h2.rss-button(style="font-size:19px;")
                                     i.share-icon.fas.fa-rss(aria-hidden="true" style="cursor:pointer;font-size:26px;")
 
 
