--- a/views/mediaPlayerPartials/embedLinkFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/embedLinkFunctionalityJs.pug
@@ -7,11 +7,21 @@ script.
 
   var domainName = '#{domainName}';
 
+  const username = '#{upload.uploader.channelUrl}';
+
   var embedString = '<iframe width="560" height="315" src="' + domainName + '/embed/' + uniqueTag + '" frameborder="0" allowfullscreen=""></iframe>'
 
   if(fileType == 'audio'){
     embedString = '<iframe width="560" height="54" src="' + domainName + '/embed/' + uniqueTag + '" frameborder="0" allowfullscreen=""></iframe>'
   }
+
+  // TODO: have to change this here
+  $('.rss-button').on('click', function () {
+    swal({
+      title: 'RSS available at \n\n' + 'https://newtube.app/' + username + '/rss',
+    });
+  })
+
 
   $('.share-button').on('click', function(){
     swal({
