--- a/views/mediaPlayerPartials/embedLinkFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/embedLinkFunctionalityJs.pug
@@ -18,7 +18,7 @@ script.
   // TODO: have to change this here
   $('.rss-button').on('click', function () {
     swal({
-      title: 'RSS available at \n\n' + 'https://newtube.app/' + username + '/rss',
+      title: 'RSS available at \n\n' + domainName + '/' + username + '/rss',
     });
   })
 
