--- a/views/mediaPlayerPartials/embedLinkFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/embedLinkFunctionalityJs.pug
@@ -18,7 +18,8 @@ script.
   // TODO: have to change this here
   $('.rss-button').on('click', function () {
     swal({
-      title: 'RSS available at \n\n' + domainName + '/' + username + '/rss',
+      title: 'RSS',
+      text: domainName + '/user/' + username + '/rss'
     });
   })
 
