--- a/views/media.pug
+++ b/views/media.pug
@@ -2,6 +2,11 @@ extends layout
 
 block content
 
+    style.
+        .swal2-content {
+            font-size:16px !important;
+        }
+
     if !upload.description
         style.
             @media (min-width: 900px) {
