--- a/views/viewPartials/channelOverviewPagination.pug
+++ b/views/viewPartials/channelOverviewPagination.pug
@@ -5,7 +5,7 @@ nav.center-block.text-center(aria-label='Page navigation example')
 
         each number in numbersArray
             li.page-item(class=(number == highlightedNumber) ? 'active' : undefined)
-                a.page-link(href=`/user/${channel.channelUrl}?page=${number}`) #{number}
+                a.page-link(href=`/user/${channel.channelUrl}?page=${number}&orderBy=${orderBy}&mediaType=${media}`) #{number}
 
         li.page-item
-            a.page-link(href=`user/${channel.channelUrl}?page=${nextNumber}`) >
+            a.page-link(href=`user/${channel.channelUrl}?page=${nextNumber}&orderBy=${orderBy}&mediaType=${media}`) >
