--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -167,7 +167,7 @@ block content
     div(style="margin-top:80px;")
         div
 
-    p
+    p#scrollToMe
     hr
 
 
@@ -180,13 +180,13 @@ block content
 
             ul.dropdown-menu.dropdown
                 li
-                    a(href=`/user/${channel.channelUrl}?orderBy=popular&mediaType=${media}&page=${page}`) Popular
+                    a(href=`/user/${channel.channelUrl}?orderBy=popular&mediaType=${media}&page=${page}&nav=true`) Popular
                 li
-                    a(href=`/user/${channel.channelUrl}?orderBy=newToOld&mediaType=${media}&page=${page}`) New To Old
+                    a(href=`/user/${channel.channelUrl}?orderBy=newToOld&mediaType=${media}&page=${page}&nav=true`) New To Old
                 li
-                    a(href=`/user/${channel.channelUrl}?orderBy=oldToNew&mediaType=${media}&page=${page}`) Old To New
+                    a(href=`/user/${channel.channelUrl}?orderBy=oldToNew&mediaType=${media}&page=${page}&nav=true`) Old To New
                 li
-                    a(href=`/user/${channel.channelUrl}?orderBy=alphabetical&mediaType=${media}&page=${page}`) Alphabetical
+                    a(href=`/user/${channel.channelUrl}?orderBy=alphabetical&mediaType=${media}&page=${page}&nav=true`) Alphabetical
 
         div.search-upload-buttons-container.dropdown(style="display:inline;padding-right:15px;")
             button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
@@ -195,13 +195,13 @@ block content
 
             ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1')
                 li(role='presentation')
-                    a(href=`/user/${channelUrl}/?mediaType=all&orderBy=${orderBy}&page=${page}`) All
+                    a(href=`/user/${channelUrl}/?mediaType=all&orderBy=${orderBy}&page=${page}&nav=true`) All
                 li(role='presentation')
-                    a(href=`/user/${channelUrl}/?mediaType=video&orderBy=${orderBy}&page=${page}`) Videos
+                    a(href=`/user/${channelUrl}/?mediaType=video&orderBy=${orderBy}&page=${page}&nav=true`) Videos
                 li(role='presentation')
-                    a(href=`/user/${channelUrl}/?mediaType=audio&orderBy=${orderBy}&page=${page}`) Audio
+                    a(href=`/user/${channelUrl}/?mediaType=audio&orderBy=${orderBy}&page=${page}&nav=true`) Audio
                 li(role='presentation')
-                    a(href=`/user/${channelUrl}/?mediaType=image&orderBy=${orderBy}&page=${page}`) Images
+                    a(href=`/user/${channelUrl}/?mediaType=image&orderBy=${orderBy}&page=${page}&nav=true`) Images
 
 
         include ../viewPartials/sensitivityFilterDropdown
@@ -263,7 +263,27 @@ block content
 
     include ../mediaPlayerPartials/thing
 
+    script.
+      $(document).ready(function () {
+        function getParameterByName(name, url = window.location.href) {
+          name = name.replace(/[\[\]]/g, '\\$&');
+          var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+            results = regex.exec(url);
+          if (!results) return null;
+          if (!results[2]) return '';
+          return decodeURIComponent(results[2].replace(/\+/g, ' '));
+        }
 
+        var navValue = getParameterByName('nav');
+        if(navValue == 'true'){
+          setTimeout(function(){
+            document.getElementById('scrollToMe').scrollIntoView();
+          }, 10)
+        }
+
+      });
+
+        // TODO: can pull this out
     if user
         script.
 
