add uploaded date

--- a/views/media.pug
+++ b/views/media.pug
@@ -684,6 +684,9 @@ block content
                     h4.fw(style="color:a5a5a5")
                         | Uploaded #{upload.timeAgo} &nbsp
 
+                    h4.fw(style="font-size:15px;color:a5a5a5")
+                        | #{uploadedAtTime} &nbsp
+
                     if upload.visibility == 'removed'
                         h2 Upload Deleted
 
