--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -180,6 +180,7 @@ block content
 
             ul.dropdown-menu.dropdown
                 li
+                    // TODO: could replace this
                     a(href=`/user/${channel.channelUrl}?orderBy=popular&mediaType=${media}&nav=true`) Popular
                 li
                     a(href=`/user/${channel.channelUrl}?orderBy=newToOld&mediaType=${media}&nav=true`) New To Old
