--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -1,6 +1,7 @@
 div.holder(style="border:")
+    // if there is no requestPath, it means it is the popular/recent pages
     if !requestPath
-        a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:#7d7373;" )
+        a.title-anchor(href=`${upload.pathToUploader}/${upload.uniqueTag}` style="color:#7d7373;" )
             div.image-container(style="")
                 if upload.thumbnails && upload.thumbnails.custom
                     img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
